@@ -657,6 +657,7 @@ test_player_it_note_delay_nna
 test_player_it_sample_porta
 test_player_it_sus_after_loop_bidi
 test_player_it_default_volume
+test_player_it_ins_199
 test_player_it_duplicate_check_transpose
 test_player_it_portamento_nna_sample
 test_player_it_portamento_offset
