@@ -121,6 +121,7 @@ Stable versions
 	- Dxx (S3M/IT: Cxx) followed by Byy on the same row now jumps to pos Y
 	  row X for S3M, IT, ModPlug XM, and Skale Tracker XM modules.
 	- IT: fix importing channel initial panning for muted channels.
+	- IT: fix playing instruments with samples >=120 in the key map.
 	- MTM: fix pattern break hex parameter.
 	- PTM: actually fix pattern break hex parameter.
 	- STM: always use 0 for pattern break parameter (ST2 ignores it).
